# PRO3-Klausurplaner

./: CMakeLists.txt  README.md  main.cpp
DataTypes/: Anmeldung.cpp  Anmeldung.h  Klausur.cpp  Klausur.h  Pruefer.cpp  Pruefer.h  Raum.cpp  Raum.h  Student.cpp  Student.h  TimeSlot.cpp  TimeSlot.h  gKlausur.cpp  gKlausur.h  pTage.cpp  pTage.h
OutputData/: KlausurPlan.csv
Readers/: AnmeldungenReader.cpp  AnmeldungenReader.h  PruefungenReader.cpp  PruefungenReader.h  RaumlisteReader.cpp  RaumlisteReader.h
csvread_Raumliste/: main.cpp
